# ttb-label-checker

./: .gitignore  Dockerfile  README.md  main.py  ocr_service.py  pyproject.toml  verifier.py
tests/: test_form_validator.py  test_ocr.py  test_verifier.py
utils/: form_validator.py
